added the Github link to the weather app

--- a/index.html
+++ b/index.html
@@ -75,6 +75,15 @@
 
       <br />
       <span class="coder">Code by Ashley White</span>
+      <span>
+        <a
+          class="githubLink"
+          href="https://github.com/Ashleyxbrianna/Weather-App-project"
+        >
+          My Github :)
+        </a>
+        /
+      </span>
     </div>
     <script src="script.js"></script>
   </body>
