--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Weather Forcast</h1>
+      <h1>Weather Forecast</h1>
       <br />
       <form id="weather-form">
         <input
