added the current weather button to html

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         />
         <input class="button" type="submit" value="Ta-da!" id="button-search" />
       </form>
+      <button class="btn" id="current-location-button">current location</button>
       <br />
       <i class="fa-solid fa-cloud-rain raincloud"></i>
 
